--- a/app/src/assets/scss/articles/_global-articles.scss
+++ b/app/src/assets/scss/articles/_global-articles.scss
@@ -44,7 +44,7 @@ $border-radius: .7rem;
   }
 }
 
-.articleS-container {
+.articles-container {
   // @include code-font;
   // overflow-y: auto;
   // overflow-x: hidden;
@@ -56,4 +56,3 @@ $border-radius: .7rem;
     color: $green
   }
 }
-
