--- a/app/src/assets/scss/pdf/_global-pdf.scss
+++ b/app/src/assets/scss/pdf/_global-pdf.scss
@@ -6,6 +6,7 @@
   font-size: .75rem;
   font-weight: 400;
   margin-bottom: 2rem;
+  padding: .25rem 1rem 0rem 1rem;
 }
 
 
@@ -36,7 +37,7 @@
 .awards-col,
 .skills-awards-container,  
 .skills-col {
-  padding: 0rem !important;
+  // padding: 0rem !important;
 }
 
 
