--- a/app/src/assets/scss/start/_global-start.scss
+++ b/app/src/assets/scss/start/_global-start.scss
@@ -1,3 +1,12 @@
+a {
+  color: $primary;
+  text-decoration: none;
+  &:hover {
+    color: $primary;
+    text-decoration: underline;
+  }
+}
+
 .main-wrapper {
   margin-bottom: 2rem;
 }
