--- a/app/src/assets/scss/_modal.scss
+++ b/app/src/assets/scss/_modal.scss
@@ -73,6 +73,8 @@
   border: 1px solid $primary;
   border-radius: .25rem;
   font-family: 'Saira Extra Condensed';
+  width: auto;
+  height: auto;
 }
 .btn-page {
   color: white;
