--- a/app/src/assets/scss/pdf/_global-pdf.scss
+++ b/app/src/assets/scss/pdf/_global-pdf.scss
@@ -1,3 +1,12 @@
+a {
+  color: $primary;
+  text-decoration: none;
+  &:hover {
+    color: $primary;
+    text-decoration: underline;
+  }
+}
+
 
 .pdf-container {
   @include body-font;
