--- a/app/src/assets/scss/start.scss
+++ b/app/src/assets/scss/start.scss
@@ -1,7 +1,8 @@
 @import "variables.scss";
 
 // Bootstrap SCSS
-@import "../../../node_modules/bootstrap/scss/bootstrap";
+@import url("https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css");
+// @import "../../../node_modules/bootstrap/scss/bootstrap";
 
 @import "mixins-start.scss";
 @import "./start/landing-start.scss";
