--- a/app/src/assets/scss/pdf/_global-pdf.scss
+++ b/app/src/assets/scss/pdf/_global-pdf.scss
@@ -19,23 +19,11 @@ a {
 }
 
 
-.heading {
+.heading-pdf {
   font-family: 'Saira Extra Condensed';
   @include heading-font;
   font-weight: 700;
   text-transform: uppercase;
-  color: $gray-800;
-}
-
-.heading-4 {
-  font-size: 1rem;
-  color: $primary;
-}
-.heading-5 {
-  font-size: .85rem;
-}
-.heading-6 {
-  font-size: .65rem;
 }
 
 // ###
@@ -74,16 +62,24 @@ a {
   background-color: $gray-900;
 }
 
-.resume-section p {
-  font-size: .60rem;
-  margin: 0rem 3.5rem 0rem .5rem;
-  padding: 0rem 0rem 0rem 0rem;
-}
 .resume-section-render p {
   font-size: .60rem;
   margin: 0rem .5rem 0rem .5rem;
   padding: 0rem 0rem 0rem 0rem;
 }
+
+.resume-section p {
+  font-size: .60rem;
+}
+
+// .subheading {
+//   text-transform: uppercase;
+//   font-weight: 500;
+//   @include heading-font;
+//   font-size: 1.35rem;
+//   // font-size: 1.5rem;
+// }
+
 
 a:hover {
   color: $primary;
@@ -94,7 +90,8 @@ a:hover {
   margin-left: .25rem;
 }
 
-.social-item {
+.social-item-pdf {
+  font-size: 0.55rem;
   // css fa vs import fa have different sizes hence the margin not needed
   // margin-bottom: 1rem;
   .social-icon-layer {
