--- a/app/src/assets/scss/_modal.scss
+++ b/app/src/assets/scss/_modal.scss
@@ -67,7 +67,7 @@
   border-radius: .25rem;
   font-family: 'Saira Extra Condensed';
 }
-.btn-close {
+.btn-return {
   color: white;
   background: $primary;
   border: 1px solid $primary;
