--- a/app/src/assets/scss/pdf/_global-pdf.scss
+++ b/app/src/assets/scss/pdf/_global-pdf.scss
@@ -113,57 +113,57 @@ a:hover {
   }
 }
 
-.devicon-name {
+.devicon-name-pdf {
   margin: .15rem 0rem 0rem 0rem;
   font-size: .5rem;
   color: black;
 }
-.list-devicons {
+.list-devicons-pdf {
   color: $forest-green;
   font-size: 1.5rem;
 }
 
-.d3-devicon {
+.d3-devicon-pdf {
   height: 1.25rem;
   width: 1.25rem;
   margin-bottom: .45rem;
 }
-.tableau-devicon {
+.tableau-devicon-pdf {
   height: 1.25rem;
   width: 1.25rem;
   margin-bottom: .45rem;
 }
-.terraform-devicon {
-  height: 1.25rem;
-  width: 1.25rem;
-  margin-bottom: .45rem;
-}
-
-.bash-devicon {
+.terraform-devicon-pdf {
   height: 1.25rem;
   width: 1.25rem;
   margin-bottom: .45rem;
 }
 
-.powershell-devicon {
+.bash-devicon-pdf {
   height: 1.25rem;
   width: 1.25rem;
   margin-bottom: .45rem;
 }
 
-.bash-devicon {
+.powershell-devicon-pdf {
   height: 1.25rem;
   width: 1.25rem;
   margin-bottom: .45rem;
 }
 
-.azure-devicon {
+.bash-devicon-pdf {
   height: 1.25rem;
   width: 1.25rem;
   margin-bottom: .45rem;
 }
 
-.vue-devicon {
+.azure-devicon-pdf {
+  height: 1.25rem;
+  width: 1.25rem;
+  margin-bottom: .45rem;
+}
+
+.vue-devicon-pdf {
   /* height: 48px;
   width: 48px;
   line-height: 1;
@@ -175,7 +175,7 @@ a:hover {
   // padding: .25rem;
   // margin-bottom: .8rem;
 }
-.ts-devicon {
+.ts-devicon-pdf {
   /* height: 48px;
   width: 48px;
   line-height: 1;
