--- a/app/src/assets/scss/pdf/_global-pdf.scss
+++ b/app/src/assets/scss/pdf/_global-pdf.scss
@@ -10,12 +10,11 @@ a {
 
 .pdf-container {
   @include body-font;
-  padding-top: .25rem;
   color: $black;
   font-size: .75rem;
   font-weight: 400;
   margin-bottom: 2rem;
-  // padding: .25rem 1rem 0rem 1rem;
+  padding: .25rem 1rem 0rem 1rem;
 }
 
 
