--- a/app/src/assets/scss/start/_landing-start.scss
+++ b/app/src/assets/scss/start/_landing-start.scss
@@ -12,6 +12,7 @@
     background-color: $royal-purple;
     color: $white;
     border: .25rem solid $royal-purple;
+    text-decoration: none;
   }
 }
 // copied from bootstrap .button class
